# tadpole

./: .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  person_matching_synthetic_data_spec.md  pyproject.toml  skills-lock.json
.github/: copilot-instructions.md
person_matching_synth/: __init__.py  appearance.py  base_person.py  config.py  emit.py  fields.py  generate.py  noise.py
tests/: conftest.py  test_appearance.py  test_base_person.py  test_config.py  test_generate.py  test_noise.py
